Add animation loading

--- a/javascripts/discourse/templates/components/user-card-contents.hbs
+++ b/javascripts/discourse/templates/components/user-card-contents.hbs
@@ -1,27 +1,30 @@
 {{#if this.visible}}
-
+  <PluginOutlet @name="before-user-card-content" @args={{hash user=this.user}} />
   {{#if this.loading}}
-    <div class="card-row">
-      <div class="animated-placeholder placeholder-animation"></div>
+    <div class="d-user-card__header d-user-card__placeholder-animation">
     </div>
-    <div class="card-row first-row d-user-card__main-content-top">
-      <div class="user-card-avatar d-user-card__avatar">
-        <div
-          class="card-avatar-placeholder animated-placeholder placeholder-animation"
-        ></div>
+    <div class="d-user-card__main-content">
+      <div class="d-user-card__main-content-top">
+        <div class="d-user-card__id">
+          <span class="card-avatar-placeholder d-user-card__placeholder-animation">
+          </span>
+          <span class="d-user-card__id-titles">
+            <div class="d-user-card__titles-top d-user-card__placeholder-animation">
+            </div>
+            <div class="d-user-card__titles-bottom d-user-card__placeholder-animation">
+            </div>
+          </span>
+        </div>
+        <div class="d-user-card__user-content">
+          <div class="d-user-card__custom-fields .card-row .d-user-card__placeholder-animation">
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="card-row second-row">
-      <div class="animated-placeholder placeholder-animation"></div>
-    </div>
-    <div class="card-row">
-      <div class="animated-placeholder placeholder-animation"></div>
-    </div>
-    <div class="card-row">
-      <div class="animated-placeholder placeholder-animation"></div>
-    </div>
-    <div class="card-row">
-      <div class="animated-placeholder placeholder-animation"></div>
+      <div class="d-user-card__main-content-bottom">
+        <div class="card-row  d-user-card__placeholder-animation"></div>
+        <div class="card-row  d-user-card__placeholder-animation"></div>
+        <div class="card-row  d-user-card__placeholder-animation"></div>
+      </div>
     </div>
   {{else}}
     <div class="d-user-card__header">
